--- a/wp-content/themes/ruhprimary/assets/scss/style.scss
+++ b/wp-content/themes/ruhprimary/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @use "section/footer";
 @use "section/info-section";
 @use "section/contactform7";
+@use "page/home";
 @use "page/quick-link";
 @use "page/contact";
 @use "page/blog";
