--- a/wp-content/themes/ruhprimary/assets/scss/utlis/_grid.scss
+++ b/wp-content/themes/ruhprimary/assets/scss/utlis/_grid.scss
@@ -17,6 +17,7 @@
 .site-main .page-home,
 .site-main .page-curriculum .curriculum__header-title,
 .site-main .page-about-us .about-page__section--story,
+.site-main .page-about .about-page__section--story,
 .site-main .page-parents-corner .parent-community,
 .site-main .page-sports-co-curricular,
 .site-main .page-sports,
@@ -48,6 +49,7 @@
   &.page-home,
   &.page-curriculum,
   &.page-about-us,
+  &.page-about,
   &.page-parents-corner,
   &.page-sports,
   &.page-sports-co-curricular,
