--- a/wp-content/themes/ruhprimary/assets/scss/page/_about.scss
+++ b/wp-content/themes/ruhprimary/assets/scss/page/_about.scss
@@ -1,6 +1,7 @@
 //_about.scss
 @use "../mixin/interpolate";
 
+.page-about,
 .page-about-us {
     background-color: #fff2dd;
     .site-main & {
@@ -13,105 +14,195 @@
             }
         }
         .site-header__toggle-line {
-            border-color: #913412;
+            border-color: #fff2dd;
+            @media (min-width: 992px) {
+                border-color: #913412;
+            }
         }
     }
 
     .about-page {
         &__section--story {
+            position: relative;
             background-color: #505c44;
             padding-bottom: 0;
-            .about-page__image--story {
-                position: absolute;
-                right: 0;
-                top: 0;
+            .container {
+                // position: relative;
+                display: flex;
+                flex-direction: column;
+                @media (min-width: 992px) {
+                    gap: 24px;
+                    flex-direction: row;
+                }
             }
             .about-page__content--story {
-                .container {
-                    position: relative;
-                }
+                position: relative;
                 h1 {
                     font-family: "ps-aelynregular";
                     font-style: normal;
                     font-weight: 400;
                     color: #fec157;
-                    padding-top: 18px;
+                    text-align: center;
+                    padding-bottom: 18px;
                     @media (min-width: 992px) {
+                        text-align: left;
                         padding-bottom: 40px;
                     }
                     @include interpolate.interpolate(font-size, 576px, 36px, 992px, 48px);
                     @include interpolate.interpolate(line-height, 576px, 32px, 992px, 33px);
                 }
                 p {
+                    max-width: 294px;
                     font-family: caustenregular;
                     font-style: normal;
                     font-weight: 400;
                     color: #fff2dd;
                     max-width: 380px;
-                    padding-bottom: 70px;
+                    padding-bottom: 30px;
+                    margin-inline: auto;
+                    text-align: center;
+                    @media (min-width: 992px) {
+                        margin: 0;
+                        text-align: left;
+                        padding-bottom: 70px;
+                    }
                     @include interpolate.interpolate(font-size, 576px, 16px, 992px, 24px);
                     @include interpolate.interpolate(line-height, 576px, 23px, 992px, 33px);
                 }
             }
-            .divider {
-                position: absolute;
-                bottom: 0;
+            .about-page__image--storyWrapper {
+                position: relative;
+                @media (min-width: 992px) {
+                    position: static;
+                }
+            }
+
+            .about-page__image--story {
+                width: calc(100% + 16px + 16px + 16px);
+                margin: 0 -16px;
                 left: 0;
                 right: 0;
-                bottom: -4px;
-                width: 100%;
-                z-index: 2;
-                position: relative;
+                text-align: center;
+                max-width: initial;
+                @media (min-width: 992px) {
+                    width: auto;
+                    margin: 0;
+                    position: absolute;
+                    left: initial;
+                    right: 0;
+                    top: 0;
+                    text-align: right;
+                    max-width: 100%;
+                }
+            }
+            .divider {
                 svg {
                     width: 100%;
                     height: 100%;
                 }
+
+                &.top {
+                    z-index: 2;
+                    position: absolute;
+                    top: -3px;
+                    width: calc(100% + 16px + 16px + 16px);
+                    left: 0;
+                    right: 0;
+                    margin: 0 -16px;
+
+                    @media (min-width: 992px) {
+                        display: none;
+                    }
+                }
+                &.bottom {
+                    z-index: 2;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    width: 100%;
+                    bottom: -5px;
+                    @media (min-width: 992px) {
+                        position: relative;
+                    }
+                }
             }
         }
         &__campuses {
-            padding-top: 120px;
-            padding-bottom: 136px;
+            padding-top: 27px;
+            padding-bottom: 56px;
             display: grid;
-            grid-template-areas:
-                "one two"
-                "three two"
-                "three four";
+            @media (min-width: 768px) {
+                padding-top: 120px;
+                padding-bottom: 136px;
+                grid-template-areas:
+                    "one two"
+                    "three two"
+                    "three four";
+            }
             > div {
-                max-width: 352px;
                 margin-inline: auto;
+                max-width: 293px;
+                @media (min-width: 768px) {
+                    max-width: 352px;
+                }
                 &:nth-child(1) {
-                    grid-area: one;
                     max-width: 412px;
+                    @media (min-width: 768px) {
+                        grid-area: one;
+                    }
                     .about-page__title--campuses {
                         font-family: caustenbold;
                         font-style: normal;
                         font-weight: 700;
-                        font-size: 64px;
-                        line-height: 33px;
                         color: #913412;
-                        padding-bottom: 40px;
+
+                        padding-bottom: 16px;
+                        text-align: center;
+                        @media (min-width: 768px) {
+                            text-align: left;
+                            padding-bottom: 40px;
+                        }
+                        @include interpolate.interpolate(font-size, 576px, 32px, 992px, 64px);
+                        @include interpolate.interpolate(line-height, 576px, 32px, 992px, 33px);
                     }
                     .about-page__text--campuses {
-                        font-family: caustenregular;
-                        font-style: normal;
-                        font-weight: 400;
-                        font-size: 24px;
-                        line-height: 33px;
-                        color: #000000;
                         max-width: 398px;
+                        p {
+                            font-family: caustenregular;
+                            font-style: normal;
+                            font-weight: 400;
+                            color: #000000;
+
+                            text-align: center;
+                            @media (min-width: 768px) {
+                                text-align: left;
+                            }
+                            @include interpolate.interpolate(font-size, 576px, 16px, 992px, 24px);
+                            @include interpolate.interpolate(line-height, 576px, 23px, 992px, 33px);
+                        }
                     }
                 }
                 &:nth-child(2) {
-                    grid-area: two;
-                    padding-top: 100px;
+                    padding-top: 40px;
+                    @media (min-width: 768px) {
+                        padding-top: 100px;
+                        grid-area: two;
+                    }
                 }
                 &:nth-child(3) {
-                    padding-top: 238px;
-                    grid-area: three;
+                    padding-top: 40px;
+                    @media (min-width: 768px) {
+                        padding-top: 238px;
+                        grid-area: three;
+                    }
                 }
                 &:nth-child(4) {
-                    padding-top: 224px;
-                    grid-area: four;
+                    padding-top: 40px;
+                    @media (min-width: 768px) {
+                        padding-top: 224px;
+                        grid-area: four;
+                    }
                 }
             }
         }
@@ -125,17 +216,15 @@
                 font-family: caustenregular;
                 font-style: normal;
                 font-weight: 400;
-                font-size: 24px;
-                line-height: 33px;
-                /* or 138% */
                 text-align: center;
                 color: #000000;
+                @include interpolate.interpolate(font-size, 576px, 16px, 992px, 24px);
+                @include interpolate.interpolate(line-height, 576px, 23px, 992px, 33px);
             }
         }
         &__detail {
             background-color: #913412;
             padding-top: 46px;
-            padding-bottom: 46px;
             position: relative;
 
             @media (min-width: 992px) {
@@ -144,14 +233,30 @@
             }
             &-container {
                 display: flex;
-                flex-direction: row;
+                gap: 34px;
+                flex-direction: column-reverse;
                 justify-content: flex-end;
                 align-items: center;
+                @media (min-width: 992px) {
+                    flex-direction: row;
+                }
             }
             &-image {
-                position: absolute;
+                width: calc(100% + 16px + 16px + 16px);
                 left: 0;
-                bottom: 0;
+                right: 0;
+                margin: 0 -16px;
+                text-align: center;
+                max-width: initial;
+                @media (min-width: 992px) {
+                    width: auto;
+                    margin-left: 0;
+                    margin-right: auto;
+                    max-width: initial;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                }
             }
             &-content {
                 max-width: 306px;
@@ -184,19 +289,47 @@
             }
         }
         &__role-future {
+            overflow: hidden;
             position: relative;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding-top: 412px;
-            padding-bottom: 412px;
-            img{
+            padding-top: 138px;
+            padding-bottom: 0;
+            background-image: url('http://ruhprimary.local/wp-content/uploads/roles-of-future-desktop.gif');
+            background-repeat: no-repeat;
+            background-position: top center;
+            @media (min-width: 992px) {
+                padding-top: 412px;
+                padding-bottom: 472px;
+            }
+            img {
+                display: none;
+                // &.mobile {
+                //     display: block;
+                // }
+                // &.desktop {
+                //     display: none;
+                // }
+                // @media (min-width: 992px) {
+                //     &.mobile {
+                //         display: none;
+                //     }
+                //     &.desktop {
+                //         display: block;
+                //     }
+                // }
+                // @media (min-width: 992px) {
                 position: absolute;
                 left: 0;
                 right: 0;
                 top: 0;
                 bottom: 0;
+                margin-inline: auto;
+                object-fit: cover;
+                object-position: center;
+                // }
             }
             .about-page__title--roles {
                 font-family: caustenbold;
@@ -206,6 +339,10 @@
                 color: #505c44;
                 max-width: 316px;
                 padding-bottom: 36px;
+                max-width: 152px;
+                @media (min-width: 992px) {
+                    max-width: initial;
+                }
                 @include interpolate.interpolate(font-size, 576px, 32px, 992px, 64px);
                 @include interpolate.interpolate(line-height, 576px, 32px, 992px, 70px);
             }
@@ -215,8 +352,10 @@
                 font-weight: 400;
                 text-align: center;
                 color: #000000;
-                max-width: 436px;
-
+                max-width: 152px;
+                @media (min-width: 992px) {
+                    max-width: 436px;
+                }
                 @include interpolate.interpolate(font-size, 576px, 16px, 992px, 24px);
                 @include interpolate.interpolate(line-height, 576px, 24px, 992px, 33px);
                 strong {
@@ -255,12 +394,20 @@
                     max-width: 388px;
                     padding-top: 28px;
                     padding-bottom: 52px;
-                    flex: 0 0 388px;
+                    padding-left: 16px;
+                    padding-right: 16px;
                     margin-top: -116px;
+                    max-width: 338px;
                     @media (min-width: 576px) {
                         max-width: 480px;
                     }
                     @media (min-width: 992px) {
+                        flex: 0 0 388px;
+                    max-width: 338px;
+                    }
+                    @media (min-width: 992px) {
+                        padding-left: 0;
+                        padding-right: 0;
                         margin-top: 0;
                         flex: 0 0 388px;
                         padding-top: 82px;
@@ -296,7 +443,10 @@
                     left: 0;
                     right: 0;
                     margin-inline: auto;
-                    top: -116px;
+                    top: -86px;
+                    @media (min-width: 992px) {
+                        top: -116px;
+                    }
                     @include interpolate.interpolate(width, 340px, 352px, 992px, 656px);
                     @include interpolate.interpolate(height, 340px, 376px, 992px, 626px);
                 }
@@ -317,7 +467,9 @@
             font-weight: 700;
             text-align: center;
             color: #fff2dd;
-
+            display: flex;
+            align-items: center;
+            justify-content: center;
             padding-bottom: 33px;
             @media (min-width: 992px) {
                 padding-bottom: 40px;
@@ -325,6 +477,19 @@
 
             @include interpolate.interpolate(font-size, 576px, 32px, 992px, 64px);
             @include interpolate.interpolate(line-height, 576px, 32px, 992px, 33px);
+            svg {
+                @include interpolate.interpolate(width, 576px, 98px, 992px, 122px);
+                @include interpolate.interpolate(height, 576px, 34px, 992px, 44px);
+            }
         }
+    }
+}
+
+.about-page__gallery-imageWrapper {
+    display: grid;
+    gap: 16px 32px;
+    grid-template-columns: repeat(3, 1fr);
+    @media (min-width: 992px) {
+        grid-template-columns: repeat(6, 1fr);
     }
 }
